[package]
name = "kv"
version = "0.1.0"
edition = "2021"
authors = ["Rivers Jin"]
description = "A simple key-value store"

[dependencies]
tokio = { version = "*", features = ["full"] }
bytes = { version = "*" }
async-recursion = { version = "*" }
linkme = { version = "*" }
router-macro = { path = "router_macro" }

serde = { version = "*", features = ["derive"] }
serde_yaml = { version = "*" }
clap = { version = "4.5.20", features = ["derive"] }
static_assertions = { version = "*" }

anyhow = { version = "*" , features = ["backtrace"] }
thiserror = "*"
chrono = "0.4.39"
itertools = "0.13.0"


[build-dependencies]
built = {version ='*', features = ["git2"]}
